# sdr-notebooks

./: .gitignore  CMakeLists.txt  README.md  qpsk_ofdm_sim.ipynb  qpsk_sim.ipynb  setup.py  utils.py
cpp_utils/: CMakeLists.txt  README.md  clean_build  run_build  run_formatting  run_tests  test.py
cpp_utils/py_bindings/: CMakeLists.txt  carrier_recovery_bindings.cpp  channel_bindings.cpp  control_bindings.cpp  interpolation_bindings.cpp  main_module.cpp  modulation_bindings.cpp
cpp_utils/sdrlib/: CMakeLists.txt
cpp_utils/sdrlib/include/sdrlib/: carrier_recovery.hpp  channel.hpp  interpolation.hpp  modulation.hpp  pid_feedback.hpp  types.hpp
cpp_utils/sdrlib/src/: carrier_recovery.cpp  channel.cpp  interpolation.cpp  modulation.cpp  pid_feedback.cpp
cpp_utils/sdrlib/tests/: test_carrier_recovery.cpp  test_channel.cpp  test_interpolation.cpp  test_modulation.cpp  test_pid_feedback.cpp
notebooks/: README.md  detection_dev.ipynb  example.ipynb  ofdm_sim.ipynb  qpsk_benchmarking.ipynb  qpsk_ofdm_sim.ipynb  qpsk_sim.ipynb  requirements.txt  symbol_timing_correction_dev.ipynb  test.py  visualization_test.ipynb
notebooks/scratch/: ofdm_sim.ipynb
py_utils/: README.md  __init__.py  carrier_recovery.py  coding.py  control.py  dsp.py  interpolators.py  pyproject.toml  timing_recovery.py  visualization.py
py_utils/py_utils/: __init__.py  carrier_recovery.py  channel.py  coding.py  control.py  dsp.py  framing.py  interpolators.py  metrics.py  modulation.py  timing_recovery.py  visualization.py
pybind11_bindings/: CMakeLists.txt  run_build
pybind11_bindings/dsp/: CMakeLists.txt
pybind11_bindings/dsp/src/: carrier_recovery.cpp
pybind11_bindings/py_bindings/: CMakeLists.txt  bind_carrier_recovery.cpp  bindings.cpp
pybind11_bindings/python/: CMakeLists.txt  bindings.cpp
pybind11_bindings/sdrlib/include/sdrlib/: carrier_recovery.hpp  channel.hpp
pybind11_bindings/sdrlib/src/: carrier_recovery.cpp  channel.cpp
utils/: __init__.py  carrier_recovery.py  channel.py  coding.py  control.py  dsp.py  filters.py  framing.py  modulation.py  sync.py  timing_recovery.py  visualization.py
