[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_utils"
version = "0.1.0"
description = "A collection of SDR utilities"
authors = [{ name = "Cole Delong", email = "coledelong421@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["numpy", "scipy", "matplotlib", "numba"]

[tool.setuptools]
packages = ["py_utils"]
include-package-data = true
